--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-<PropertyGroup>
-  <LangVersion>preview</LangVersion>
-</PropertyGroup>
+
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 
 </Project>
