--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-<LangVersion>preview</LangVersion>
+<LangVersion>7.3</LangVersion>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
