--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -8,5 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-
+<PropertyGroup>
+  <LangVersion>preview</LangVersion>
+</PropertyGroup>
 </Project>
