--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -4,5 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
-
+<PropertyGroup>
+  <LangVersion>preview</LangVersion>
+</PropertyGroup>
 </Project>
