--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -4,6 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+  <PackageReference Include="ScottPlot" Version="4.1.21" />
+  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+</ItemGroup>
+  
 <PropertyGroup>
   <LangVersion>preview</LangVersion>
 </PropertyGroup>
