--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -2,15 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-  <PackageReference Include="ScottPlot" Version="4.1.21" />
-  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-</ItemGroup>
-  
-<PropertyGroup>
-  <LangVersion>preview</LangVersion>
-</PropertyGroup>
+    <PackageReference Include="ScottPlot" Version="4.1.62" />
+  </ItemGroup>
+
 </Project>
