--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -1,12 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
- <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
-    <KnownFrameworkReference Update="Microsoft.WindowsDesktop.App.WPF" IsWindowsOnly="false" />
+    <Compile Remove="figures\**" />
+    <EmbeddedResource Remove="figures\**" />
+    <None Remove="figures\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ScottPlot" Version="4.1.62" />
