--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -2,16 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="figures\**" />
-    <EmbeddedResource Remove="figures\**" />
-    <None Remove="figures\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ScottPlot" Version="4.1.62" />
