--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -1,16 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <TargetFramework>net7.0</TargetFramework>
+    <LangVersion>preview</LangVersion> 
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-
+  
   <ItemGroup>
     <PackageReference Include="ScottPlot" Version="4.1.62" />
   </ItemGroup>
-
 </Project>
