--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -9,5 +9,6 @@
   
   <ItemGroup>
     <PackageReference Include="ScottPlot" Version="4.1.62" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 </Project>
